lagt till video

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
@@ -15,10 +15,10 @@
            <img src="bilder/annelii_logga_png_24.png" alt="logotyp">
         </header>
         <main>
-            <h1>Video för webben<br>
-                bakgrundsvideo
-            </h1>
-
+            <video autoplay muted loop id="background-video">
+                <source src="video/Videobakgrund_komprimerad_webm.webm" type="video/webm">
+                <source src="video/Videobakgrund_komprimerad_h264.mp4" type="video/mp4">
+            </video>
             <footer>
                 <p><strong>&copy;Anne-Lii Hansen 2023<br>
                     Video för webben</strong></p>
