lagt till video i två format

--- a/index.html
+++ b/index.html
@@ -10,15 +10,22 @@
     <title>Document</title>
 </head>
 <body>
+   
     <div class="container">
         <header>
-           <img src="bilder/annelii_logga_png_24.png" alt="logotyp">
+            
+            <img src="bilder/annelii_logga_png_24.png" alt="logotyp">
+            
         </header>
         <main>
             <video autoplay muted loop id="background-video">
-                <source src="video/Videobakgrund_komprimerad_webm.webm" type="video/webm">
-                <source src="video/Videobakgrund_komprimerad_h264.mp4" type="video/mp4">
+                <source src="video/Videobakgrund1_komp_webm.webm" type="video/webm">
+                <source src="video/Videobakgrund1_komp.mp4" type="video/mp4">
             </video>
+            <section>
+                <h1></h1>
+                <p>Jag har på denna sida avnänt mig av video elementet som jag har infogat i HTML koden.</p>
+            </section>
             <footer>
                 <p><strong>&copy;Anne-Lii Hansen 2023<br>
                     Video för webben</strong></p>
