valideringfel plays-inline ej tillåtet i videotagg

--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
 <body>
     <header id="main-header">
         <img src="bilder/annelii_logga_png_24.png" alt="">
-        <video autoplay loop plays-inline>
+        <video autoplay loop>
             <source src="video/Videobakgrund2_komp_webm.webm" type="video/webm">
-            <source src="video/Videobakgrund 2_KOMP.mp4" type="video/mp4">
+            <source src="video/Videobakgrund_2_KOMP.mp4" type="video/mp4">
         </video>
     </header>
     <div class="container">
         <main>
             <section class="text">
+                
                 <p>Videon är filmad med en mobilkamera av modellen Samsung Galaxy s20. 1920 x 1080 i upplösning, 30 fps och med stativ. 
                     Redigerad i Adobe Premiere PRO 2024 där även ljudet togs bort. 
                     Originalfilmen är komprimerad i programmet Handbrake till mp4 format samt webm format båda med en filstorlek under 2MB. 
