adderade muted och playsinline i videotaggen

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
     <header id="main-header">
         <img src="bilder/annelii_logga_png_24.png" alt="">
-        <video autoplay loop >
-            <source src="video/Videobakgrund2_komp_webm.webm" type="video/webm">
-            <source src="video/Videobakgrund_2_KOMP.mp4" type="video/mp4">
+        <video autoplay muted loop playsinline>
+            <source src="video/bakgrund_komp_webm.webm" type="video/webm">
+            <source src="video/bakgrund_komp.mp4" type="video/mp4">
         </video>
     </header>
     <div class="container">
